Multi-module project. closes #1

--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,11 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
 					<goals>install</goals>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 	<scm>
 		<developerConnection>scm:git:https://github.com/rishabhsvats/sfg-pet-clinic.git</developerConnection>
 	  <tag>HEAD</tag>
