--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Fri Mar 04 12:16:32 IST 2022
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-scm.url=scm\:git\:https\://github.com/rishabhsvats/sfg-pet-clinic.git
-preparationGoals=clean verify
-projectVersionPolicyId=default
-remoteTagging=true
+#Fri Mar 04 12:19:34 IST 2022
 scm.commentPrefix=[maven-release-plugin] 
+project.rel.guru.springframwork\:pet-clinic-web=0.0.2
+pushChanges=true
+project.rel.guru.springframwork\:pet-clinic-data=0.0.2
+scm.tag=sfg-pet-clinic-0.0.2
+remoteTagging=true
+project.scm.guru.springframwork\:sfg-pet-clinic.tag=HEAD
+projectVersionPolicyId=default
+project.scm.guru.springframwork\:sfg-pet-clinic.developerConnection=scm\:git\:https\://github.com/rishabhsvats/sfg-pet-clinic.git
+project.dev.guru.springframwork\:sfg-pet-clinic=0.0.3-SNAPSHOT
+scm.url=scm\:git\:https\://github.com/rishabhsvats/sfg-pet-clinic.git
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.dev.guru.springframwork\:pet-clinic-data=0.0.3-SNAPSHOT
+preparationGoals=clean verify
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.dev.guru.springframwork\:pet-clinic-web=0.0.3-SNAPSHOT
+project.rel.guru.springframwork\:sfg-pet-clinic=0.0.2
+project.scm.guru.springframwork\:pet-clinic-web.empty=true
+project.scm.guru.springframwork\:pet-clinic-data.empty=true
+completedPhase=end-release
