--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -15,8 +15,6 @@
         <webjars-jquery-ui.version>1.11.4</webjars-jquery-ui.version>
         <webjars-jquery.version>2.2.4</webjars-jquery.version>
         <wro4j.version>1.8.0</wro4j.version>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
@@ -124,12 +122,12 @@
                     <artifactId>bootstrap</artifactId>
                     <version>${webjars-bootstrap.version}</version>
                 </dependency>
+                <dependency>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-core</artifactId>
+                    <version>2.23.0</version>
+                </dependency>
             </dependencies>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.22.2</version>
         </plugin>
     </plugins>
 </build>
